--- a/src/styles.css
+++ b/src/styles.css
@@ -38,3 +38,17 @@
   .p-1 {
     padding: 1px;
   }
+
+  .row {
+    padding:  1px;
+  }
+
+  .col {
+    flex-grow: 1;
+    margin-right: 1px;
+  }
+
+  input {
+    display: block;
+    margin: 5px;
+  }
